--- a/src/components/Content/Content.module.css
+++ b/src/components/Content/Content.module.css
@@ -4,7 +4,7 @@ section {
 
 @media (min-width: 500px) {
   section {
-    padding: 50px 200px;
+    padding: 50px 15%;
   }
 }
 /*# sourceMappingURL=Content.module.css.map */
