--- a/src/components/UI/Welcome/Welcome.module.sass
+++ b/src/components/UI/Welcome/Welcome.module.sass
@@ -1,9 +1,9 @@
-$keoRed: #E51A23
+$orange: #f6b646
     
 .LoginBtn
   line-height: 1.4
   &:hover
-    color: $keoRed
+    color: $orange
 
 @media (min-width: 1100px)
     .Sidebar
