--- a/src/components/ItemsWrapper/ItemsWrapper.module.sass
+++ b/src/components/ItemsWrapper/ItemsWrapper.module.sass
@@ -7,6 +7,11 @@
 @media (min-width: 870px)
     .Grid
         grid-template-columns: 1fr 1fr
+        justify-items: start
+        > div:nth-child(3n - 1)
+            justify-self: center
+        > div:nth-child(3n)
+            justify-self: end
 
 @media (min-width: 1100px)
     .Grid
