--- a/src/components/Navigation/Navbar/Navbar.module.css
+++ b/src/components/Navigation/Navbar/Navbar.module.css
@@ -1,6 +1,6 @@
 .Navbar {
   color: white;
-  padding: 0 200px;
+  padding: 0 15%;
   height: 125px;
   z-index: 2;
   background-color: black;
@@ -107,17 +107,18 @@
   padding: 0;
 }
 
-.Cart a {
-  text-decoration: none;
+.Cart button:hover {
+  color: #f6b646;
 }
 
-.Cart a:hover {
-  color: white;
+.Cart a {
+  text-decoration: none;
 }
 
 .Cart span {
   font-weight: 700;
   font-size: 20px;
+  color: #f6b646;
 }
 
 .MobileCart {
@@ -189,7 +190,6 @@
 @media (max-width: 1100px) {
   .Navbar {
     height: 130px;
-    padding: 10px 20px 10px 50px;
   }
   .LeftGroup {
     height: 100%;
