--- a/src/components/Navigation/Sidebar/Sidebar.module.css
+++ b/src/components/Navigation/Sidebar/Sidebar.module.css
@@ -2,7 +2,6 @@
   background-color: black;
   width: 280px;
   position: fixed;
-  overflow: scroll;
   width: 70%;
   height: 100%;
   left: 0;
@@ -21,10 +20,6 @@
   margin-bottom: 20px;
 }
 
-a, li, .NavLinkItem {
-  color: white;
-}
-
 input {
   height: 30px;
   width: 80%;
@@ -32,7 +27,7 @@ input {
 }
 
 nav {
-  height: 100%;
+  height: 100vh;
   overflow: hidden;
 }
 
@@ -76,10 +71,7 @@ nav .ArrowOpen {
 .NavItems a, .NavItems li {
   text-decoration: none;
   font-weight: 700;
-}
-
-.NavItems li.active {
-  color: #E51A23;
+  color: white;
 }
 
 .NavItems .CategoriesFlex {
@@ -131,9 +123,6 @@ nav .ArrowOpen {
 }
 
 @media (min-width: 1100px) {
-  .LoginBtn {
-    display: none;
-  }
   .Sidebar {
     width: 15vw;
     overflow-y: scroll;
@@ -155,7 +144,6 @@ nav .ArrowOpen {
     transition: color 100ms ease-in;
   }
   li:hover {
-    color: #E51A23;
     -webkit-transition: color 100ms ease-in;
     transition: color 100ms ease-in;
   }
