--- a/src/components/Navigation/Sidebar/Sidebar.module.sass
+++ b/src/components/Navigation/Sidebar/Sidebar.module.sass
@@ -1,10 +1,10 @@
 $keoRed: #E51A23
+$orange: #f6b646
 
 .Sidebar
     background-color: black
     width: 280px
     position: fixed
-    overflow: scroll
     width: 70%
     height: 100%
     left: 0
@@ -16,16 +16,12 @@ $keoRed: #E51A23
     .Logo
         margin-bottom: 20px
 
-
-a, li, .NavLinkItem
-    color: white
-
 input
     height: 30px
     width: 80%
     outline-width: 0
 nav
-    height: 100%
+    height: 100vh
     overflow: hidden
     .Arrow
         color: $keoRed
@@ -48,8 +44,7 @@ nav
     a, li
         text-decoration: none
         font-weight: 700
-    li.active
-        color: $keoRed
+        color: white
     .CategoriesFlex
         display: flex
         align-items: center
@@ -76,8 +71,6 @@ nav
             display: block
 
 @media (min-width: 1100px)
-    .LoginBtn
-        display: none
     .Sidebar
         width: 15vw
         overflow-y: scroll
@@ -94,7 +87,6 @@ nav
     li
         transition: color 100ms ease-in
         &:hover
-            color: $keoRed
             transition: color 100ms ease-in
 
 .Open
