--- a/src/containers/Cart/Cart.module.css
+++ b/src/containers/Cart/Cart.module.css
@@ -1,9 +1,35 @@
 .Cart {
   padding: 5%;
   margin: 0 auto;
-  height: 300px;
+  height: auto;
   background-color: #dfdddd;
   -webkit-box-shadow: 2px 2px 15px 1px #8a8a8a;
           box-shadow: 2px 2px 15px 1px #8a8a8a;
+}
+
+.Grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  grid-gap: 30px;
+  justify-items: center;
+}
+
+@media (min-width: 870px) {
+  .Grid {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    justify-items: start;
+  }
+}
+
+@media (min-width: 1100px) {
+  .Grid {
+    -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+  }
 }
 /*# sourceMappingURL=Cart.module.css.map */
