--- a/src/containers/Cart/Cart.module.sass
+++ b/src/containers/Cart/Cart.module.sass
@@ -1,6 +1,23 @@
 .Cart
     padding: 5%
     margin: 0 auto
-    height: 300px
+    height: auto
     background-color: #dfdddd
     box-shadow: 2px 2px 15px 1px #8a8a8a
+
+.Grid
+    display: grid
+    grid-template-columns: 1fr
+    grid-gap: 30px
+    justify-items: center
+
+@media (min-width: 870px)
+    .Grid
+        grid-template-columns: 1fr 1fr
+        justify-items: start
+
+
+@media (min-width: 1100px)
+    .Grid
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr
+        grid-template-rows: 1fr 1fr
