--- a/src/components/Content/Content.module.sass
+++ b/src/components/Content/Content.module.sass
@@ -1,6 +1,9 @@
 section
     padding: 10px 50px
-    
+    min-height: 70.6vh
+
+//DESKTOP
 @media (min-width: 500px)
     section
         padding: 50px 15%
+        min-height: 66vh
