--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -1,8 +1,12 @@
-#KeoLogo {
+.KeoLogo {
   width: 135px;
 }
 
 .NotVisible {
   opacity: 0;
+}
+
+.ModalLogo {
+  width: 50%;
 }
 /*# sourceMappingURL=Logo.module.css.map */
