--- a/src/components/Navigation/SearchButton/SearchButton.module.sass
+++ b/src/components/Navigation/SearchButton/SearchButton.module.sass
@@ -8,7 +8,7 @@ $keoRed: #E51A23
     width: 30%
     height: 6%
     right: 0
-    top: 150px
+    top: 125px
     font-weight: 500
     z-index: 1
     color: white
@@ -17,6 +17,8 @@ $keoRed: #E51A23
     transition: transform 300ms ease-out
     cursor: pointer
     &:active
+        opacity: .8
+    &:hover
         opacity: .8
 
 .SearchButton.Desktop
