--- a/src/components/UI/Welcome/Welcome.module.sass
+++ b/src/components/UI/Welcome/Welcome.module.sass
@@ -1,11 +1,13 @@
 $orange: #f6b646
-    
+  
 .LoginBtn
   line-height: 1.4
   &:hover
     color: $orange
 
 @media (min-width: 1100px)
-    .Sidebar
-        .LoginBtn
-            display: none
+  .Mobile
+    display: none
+  .Sidebar
+    .LoginBtn
+      display: none
