--- a/src/components/Content/Content.module.css
+++ b/src/components/Content/Content.module.css
@@ -1,10 +1,12 @@
 section {
   padding: 10px 50px;
+  min-height: 70.6vh;
 }
 
 @media (min-width: 500px) {
   section {
     padding: 50px 15%;
+    min-height: 66vh;
   }
 }
 /*# sourceMappingURL=Content.module.css.map */
