--- a/src/components/Navigation/Navbar/Navbar.module.sass
+++ b/src/components/Navigation/Navbar/Navbar.module.sass
@@ -2,11 +2,12 @@ $keoRed: #E51A23
 $orange: #f6b646
 
 .Navbar
-  // position: fixed
+  // position: sticky
   // top: 0
   // left: 0
   color: white
   padding: 0 15%
+  // width: 100%
   height: 125px
   z-index: 2
   background-color: black
@@ -88,6 +89,7 @@ $orange: #f6b646
   width: 80px
   height: 80px
   cursor: pointer
+  transition: background 0ms ease-in-out
   transition: all 300ms ease-in-out
   /* border: 3px solid #fff */
   
@@ -96,6 +98,7 @@ $orange: #f6b646
   height: 6px
   background: #fff
   border-radius: 5px
+  transition: background 0ms ease-in-out
   transition: all 300ms ease-in-out
   
 .MenuBtnBurger::before,
@@ -106,18 +109,24 @@ $orange: #f6b646
   height: 6px
   background: #fff
   border-radius: 5px
+  transition: background 0ms ease-in-out
   transition: all 300ms ease-in-out
   
 .MenuBtnBurger::before
-  transform: translateY(-16px)
+    transform: translateY(-16px)
   
 .MenuBtnBurger::after
-  transform: translateY(16px)
+    transform: translateY(16px)
+
+.MenuBtn.Open .MenuBtnBurger,
+.MenuBtn.Open .MenuBtnBurger::before,
+.MenuBtn.Open .MenuBtnBurger::after
+  background: transparent
+  transition: background 0ms ease-in-out
 
 .NotVisible
     opacity: 0
 
-// DON'T SHOW IN DESKTOP
 // .MenuBtn
 //     display: none
    
@@ -125,26 +134,37 @@ $orange: #f6b646
 @media (max-width: 1100px)
   .Navbar
     height: 130px
-    // padding: 10px 15px
-
+    padding-right: 6%
+  
   .LeftGroup
     height: 100%
     width: 100%
     justify-content: space-between
 
+  .MenuBtn .MenuBtnBurger::before,
+  .MenuBtn .MenuBtnBurger::after,
+  .MenuBtn .MenuBtnBurger
+    background: #fff
+    box-shadow: none
+
+  .MenuBtn.Open .MenuBtnBurger::before,
+  .MenuBtn.Open .MenuBtnBurger::after,
+  .MenuBtn.Open .MenuBtnBurger
+    transition: all 300ms ease-in-out
   /* ANIMATION */
   .MenuBtn.Open .MenuBtnBurger
     transform: translateX(-50px)
     background: transparent
     box-shadow: none
   .MenuBtn.Open .MenuBtnBurger::before
+    background: #fff
     transform: rotate(45deg) translate(35px, -35px)
   .MenuBtn.Open .MenuBtnBurger::after
+    background: #fff
     transform: rotate(-45deg) translate(35px, 35px)
 
   .MobileCart
     display: flex
-    opacity: 1
   .NotVisible
     opacity: 0
   .Desktop
