--- a/src/components/ShopItem/ShopItem.module.css
+++ b/src/components/ShopItem/ShopItem.module.css
@@ -11,8 +11,8 @@
           justify-content: space-between;
   -webkit-box-shadow: 0 25px 25px 0 rgba(0, 0, 0, 0.2);
           box-shadow: 0 25px 25px 0 rgba(0, 0, 0, 0.2);
-  width: 250px;
-  height: 550px;
+  width: 70%;
+  height: 100%;
   text-align: center;
   font-family: 'Montserrat', sans-serif;
 }
@@ -28,7 +28,7 @@
 }
 
 .ShopItem img {
-  width: 250px;
+  width: 100%;
   max-height: 330px;
 }
 
@@ -74,5 +74,45 @@ p {
   background-color: #000;
   cursor: pointer;
   font-size: 18px;
+}
+
+@media (min-width: 500px) {
+  .ShopItem {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-shadow: 0 25px 25px 0 rgba(0, 0, 0, 0.2);
+            box-shadow: 0 25px 25px 0 rgba(0, 0, 0, 0.2);
+    width: 250px;
+    height: 550px;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+  }
+  .ImgDiv {
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  img {
+    width: 250px;
+    max-height: 330px;
+  }
+  span, select {
+    margin-bottom: 10px;
+  }
+  span {
+    margin-right: 5px;
+  }
 }
 /*# sourceMappingURL=ShopItem.module.css.map */
