--- a/src/components/ShopItem/ShopItem.module.sass
+++ b/src/components/ShopItem/ShopItem.module.sass
@@ -5,8 +5,8 @@ $keoRed: #E51A23
     flex-direction: column
     justify-content: space-between
     box-shadow: 0 25px 25px 0 rgba(0, 0, 0, 0.2)
-    width: 250px
-    height: 550px
+    width: 70%
+    height: 100%
     text-align: center
     font-family: 'Montserrat', sans-serif
     .ImgDiv
@@ -14,7 +14,7 @@ $keoRed: #E51A23
         display: flex
         align-items: center
     img
-        width: 250px
+        width: 100%
         max-height: 330px
     span, select
         margin-bottom: 10px
@@ -47,6 +47,25 @@ p
     cursor: pointer
     font-size: 18px
 
-// .ShopItem button:hover
-//     opacity: .7
+@media (min-width: 500px)
+    .ShopItem
+        display: flex
+        flex-direction: column
+        justify-content: space-between
+        box-shadow: 0 25px 25px 0 rgba(0, 0, 0, 0.2)
+        width: 250px
+        height: 550px
+        text-align: center
+        font-family: 'Montserrat', sans-serif
+    .ImgDiv
+        height: 100%
+        display: flex
+        align-items: center
+    img
+        width: 250px
+        max-height: 330px
+    span, select
+        margin-bottom: 10px
+    span
+        margin-right: 5px
     
