--- a/src/components/UI/LoginForm/LoginForm.module.css
+++ b/src/components/UI/LoginForm/LoginForm.module.css
@@ -1,6 +1,6 @@
 .LoginForm {
   text-align: center;
-  height: 400px;
+  height: 100%;
   padding: 5%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -16,7 +16,7 @@
       justify-content: space-around;
 }
 
-.LoginForm .LogoDiv {
+.LogoDiv {
   background-color: black;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -27,8 +27,21 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  height: 80px;
+  width: 80px;
+  border-radius: 50%;
+}
+
+.SignInRoute .LogoDiv {
   height: 200px;
   width: 200px;
-  border-radius: 50%;
+  margin: 40px 0 60px;
+}
+
+@media (min-width: 500px) {
+  .LogoDiv {
+    height: 200px;
+    width: 200px;
+  }
 }
 /*# sourceMappingURL=LoginForm.module.css.map */
