--- a/src/components/UI/LoginForm/LoginForm.module.sass
+++ b/src/components/UI/LoginForm/LoginForm.module.sass
@@ -1,16 +1,27 @@
 .LoginForm
     text-align: center
-    height: 400px
+    height: 100%
     padding: 5%
     display: flex
     flex-direction: column
     align-items: center
     justify-content: space-around
+.LogoDiv
+    background-color: black
+    display: flex
+    justify-content: center
+    align-items: center
+    height: 80px
+    width: 80px
+    border-radius: 50%
+.SignInRoute
     .LogoDiv
-        background-color: black
-        display: flex
-        justify-content: center
-        align-items: center
         height: 200px
         width: 200px
-        border-radius: 50%
+        margin: 40px 0 60px
+        
+
+@media (min-width: 500px)
+    .LogoDiv
+        height: 200px
+        width: 200px
