--- a/src/components/UI/Modal/Modal.module.css
+++ b/src/components/UI/Modal/Modal.module.css
@@ -2,22 +2,30 @@
   position: fixed;
   z-index: 500;
   background-color: white;
-  width: 70%;
+  width: 250px;
+  height: 250px;
   border: 1px solid #ccc;
   -webkit-box-shadow: 1px 1px 1px black;
           box-shadow: 1px 1px 1px black;
-  padding: 16px;
+  padding: 2%;
+  font-size: 0.8em;
   left: 15%;
   top: 30%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  -webkit-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
+  -webkit-transition: all 300ms ease-out;
+  transition: all 300ms ease-out;
+}
+
+.Modal h2 {
+  margin: 0;
 }
 
 @media (min-width: 600px) {
   .Modal {
     width: 500px;
+    font-size: 1em;
+    height: 500px;
     left: calc(50% - 250px);
   }
 }
