--- a/src/components/UI/Modal/Modal.module.sass
+++ b/src/components/UI/Modal/Modal.module.sass
@@ -2,16 +2,26 @@
     position: fixed
     z-index: 500
     background-color: white
-    width: 70%
+    width: 250px
+    height: 250px
     border: 1px solid #ccc
     box-shadow: 1px 1px 1px black
-    padding: 16px
+    padding: 2%
+    font-size: 0.8em
+    // position: absolute;
+    // left: 50%
+    // top: 50%
+    // transform: translate(-50%, -50%)
     left: 15%
     top: 30%
     box-sizing: border-box
-    transition: all 0.3s ease-out
+    transition: all 300ms ease-out
+    h2
+        margin: 0
 
 @media (min-width: 600px)
     .Modal
         width: 500px
+        font-size: 1em
+        height: 500px
         left: calc(50% - 250px)
