--- a/src/containers/Cart/Cart.module.sass
+++ b/src/containers/Cart/Cart.module.sass
@@ -1,5 +1,5 @@
 .Cart
-    padding: 5%
+    padding: 10%
     margin: 0 auto
     height: auto
     background-color: #dfdddd
@@ -12,6 +12,8 @@
     justify-items: center
 
 @media (min-width: 870px)
+    .Cart
+        padding: 5%
     .Grid
         grid-template-columns: 1fr 1fr
         justify-items: start
@@ -19,5 +21,5 @@
 
 @media (min-width: 1100px)
     .Grid
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr
+        grid-template-columns: 1fr 1fr 1fr 1fr
         grid-template-rows: 1fr 1fr
