--- a/src/containers/Cart/CartItem/CartItem.module.css
+++ b/src/containers/Cart/CartItem/CartItem.module.css
@@ -1,5 +1,4 @@
 .CartItem {
-  width: 50%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -12,14 +11,15 @@
           justify-content: space-between;
   -webkit-box-shadow: 0 25px 25px 0 rgba(0, 0, 0, 0.2);
           box-shadow: 0 25px 25px 0 rgba(0, 0, 0, 0.2);
-  width: 200px;
-  height: 350px;
+  background-color: #ebe1e1;
+  width: 80%;
+  height: 100%;
   text-align: center;
   font-family: 'Montserrat', sans-serif;
+  font-size: 0.8em;
 }
 
 .CartItem .ImgDiv {
-  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -28,9 +28,17 @@
           align-items: center;
 }
 
-.CartItem img {
-  width: 200px;
-  max-height: 230px;
+.CartItem .ImgTag {
+  width: 100%;
+}
+
+.CartItem .Name {
+  margin: 0;
+  margin-top: 5%;
+}
+
+.CartItem .Quantity {
+  margin: 5%;
 }
 
 .CartItem span, .CartItem select {
@@ -39,5 +47,17 @@
 
 .CartItem span {
   margin-right: 5px;
+}
+
+@media (min-width: 500px) {
+  .CartItem {
+    font-size: 1em;
+    width: 200px;
+    height: 350px;
+  }
+  .CartItem .ImgTag {
+    width: 200px;
+    max-height: 230px;
+  }
 }
 /*# sourceMappingURL=CartItem.module.css.map */
