--- a/src/containers/Cart/CartItem/CartItem.module.sass
+++ b/src/containers/Cart/CartItem/CartItem.module.sass
@@ -1,21 +1,38 @@
 .CartItem
-    width: 50%
     display: flex
     flex-direction: column
     justify-content: space-between
     box-shadow: 0 25px 25px 0 rgba(0, 0, 0, 0.2)
-    width: 200px
-    height: 350px
+    background-color: #ebe1e1
+    // width: 150px
+    // height: 250px
+    width: 80%
+    height: 100%
     text-align: center
     font-family: 'Montserrat', sans-serif
+    font-size: 0.8em
     .ImgDiv
-        height: 100%
         display: flex
         align-items: center
-    img
-        width: 200px
-        max-height: 230px
+    .ImgTag
+        width: 100%
+    .BottomDiv
+        justify-self: 
+    .Name
+        margin: 0
+        margin-top: 5%
+    .Quantity
+        margin: 5%
     span, select
         margin-bottom: 10px
     span
         margin-right: 5px
+
+@media (min-width: 500px)
+    .CartItem
+        font-size: 1em
+        width: 200px
+        height: 350px
+        .ImgTag
+            width: 200px
+            max-height: 230px
