--- a/src/components/Content/Content.module.sass
+++ b/src/components/Content/Content.module.sass
@@ -1,9 +1,9 @@
 section
     padding: 10px 50px
-    min-height: 70.6vh
+    min-height: calc(70vh - 20px)
 
 //DESKTOP
 @media (min-width: 500px)
     section
         padding: 50px 15%
-        min-height: 66vh
+        min-height: calc(78vh - 100px)
