--- a/src/components/UI/LoginForm/LoginForm.module.sass
+++ b/src/components/UI/LoginForm/LoginForm.module.sass
@@ -19,9 +19,16 @@
         height: 200px
         width: 200px
         margin: 40px 0 60px
+
+.CartSignIn
+    .LogoDiv
+        height: 200px
+        width: 200px
+        margin: 0 0 60px
         
 
 @media (min-width: 500px)
     .LogoDiv
         height: 200px
         width: 200px
+        margin: 40px 0 60px
