--- a/src/components/Navigation/Navbar/Navbar.module.css
+++ b/src/components/Navigation/Navbar/Navbar.module.css
@@ -1,7 +1,7 @@
 .Navbar {
   color: white;
   padding: 0 15%;
-  height: 125px;
+  height: 12vh;
   z-index: 2;
   background-color: black;
   overflow: hidden;
@@ -203,7 +203,7 @@
 
 @media (max-width: 1100px) {
   .Navbar {
-    height: 130px;
+    height: 20vh;
     padding-right: 6%;
   }
   .LeftGroup {
