--- a/src/components/Navigation/Navbar/Navbar.module.sass
+++ b/src/components/Navigation/Navbar/Navbar.module.sass
@@ -8,7 +8,7 @@ $orange: #f6b646
   color: white
   padding: 0 15%
   // width: 100%
-  height: 125px
+  height: 12vh
   z-index: 2
   background-color: black
   overflow: hidden
@@ -133,7 +133,7 @@ $orange: #f6b646
 //ON MOBILE
 @media (max-width: 1100px)
   .Navbar
-    height: 130px
+    height: 20vh
     padding-right: 6%
   
   .LeftGroup
