--- a/src/components/UI/LoginForm/LoginForm.module.css
+++ b/src/components/UI/LoginForm/LoginForm.module.css
@@ -38,10 +38,17 @@
   margin: 40px 0 60px;
 }
 
+.CartSignIn .LogoDiv {
+  height: 200px;
+  width: 200px;
+  margin: 0 0 60px;
+}
+
 @media (min-width: 500px) {
   .LogoDiv {
     height: 200px;
     width: 200px;
+    margin: 40px 0 60px;
   }
 }
 /*# sourceMappingURL=LoginForm.module.css.map */
