--- a/src/containers/Cart/Cart.module.css
+++ b/src/containers/Cart/Cart.module.css
@@ -7,6 +7,10 @@
           box-shadow: 2px 2px 15px 1px #8a8a8a;
 }
 
+.LogInMsg {
+  text-align: center;
+}
+
 .Grid {
   display: -ms-grid;
   display: grid;
