--- a/src/containers/Cart/Cart.module.sass
+++ b/src/containers/Cart/Cart.module.sass
@@ -4,6 +4,9 @@
     height: auto
     background-color: #dfdddd
     box-shadow: 2px 2px 15px 1px #8a8a8a
+    
+.LogInMsg
+    text-align: center
 
 .Grid
     display: grid
