--- a/src/containers/Footer/Footer.module.css
+++ b/src/containers/Footer/Footer.module.css
@@ -1,6 +1,6 @@
 footer {
-  width: 100%;
-  height: 9vh;
+  width: 100vw;
+  height: 10vh;
   text-align: center;
   color: white;
   background-color: black;
@@ -13,5 +13,6 @@ footer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  overflow-x: hidden;
 }
 /*# sourceMappingURL=Footer.module.css.map */
