--- a/src/containers/Footer/Footer.module.sass
+++ b/src/containers/Footer/Footer.module.sass
@@ -1,12 +1,10 @@
 footer
-    width: 100%
-    height: 9vh
+    width: 100vw
+    height: 10vh
     text-align: center
     color: white
     background-color: black
     display: flex
     justify-content: center
     align-items: center
-    // position: absolute
-    // bottom: 0vh
-    // left: 0
+    overflow-x: hidden
