fixed no products found

--- a/src/components/Content/Content.module.sass
+++ b/src/components/Content/Content.module.sass
@@ -1,7 +1,12 @@
 section
     padding: 10px 50px
     min-height: calc(70vh - 20px)
-
+    display: flex
+    flex-flow: column
+    text-align: center
+    .FaceIcon
+        margin: 7% auto
+        
 //DESKTOP
 @media (min-width: 500px)
     section
