--- a/src/components/Content/Content.module.css
+++ b/src/components/Content/Content.module.css
@@ -1,6 +1,18 @@
 section {
   padding: 10px 50px;
   min-height: calc(70vh - 20px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  text-align: center;
+}
+
+section .FaceIcon {
+  margin: 7% auto;
 }
 
 @media (min-width: 500px) {
