--- a/src/components/Navigation/SearchButton/SearchButton.module.css
+++ b/src/components/Navigation/SearchButton/SearchButton.module.css
@@ -48,7 +48,7 @@
     font-size: 20px;
     height: 50px;
     left: 15vw;
-    top: 150px;
+    top: 15vh;
     overflow: hidden;
   }
   .SearchButton.Mobile {
