--- a/src/components/Navigation/SearchButton/SearchButton.module.sass
+++ b/src/components/Navigation/SearchButton/SearchButton.module.sass
@@ -35,7 +35,7 @@ $keoRed: #E51A23
         font-size: 20px
         height: 50px
         left: 15vw
-        top: 150px
+        top: 15vh
         overflow: hidden
     .SearchButton.Mobile
         display: none
