--- a/src/components/Content/Content.module.css
+++ b/src/components/Content/Content.module.css
@@ -8,6 +8,9 @@ section {
   -webkit-box-direction: normal;
       -ms-flex-flow: column;
           flex-flow: column;
+}
+
+section .NotFoundText {
   text-align: center;
 }
 
